--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,8 +15,8 @@ body {
   align-items: center;
   justify-content: center;
   padding: 15px 0 15px 0;
-  box-shadow: 0px 3px 14px 0px #4961bc;
-  background-color: #4961bc;
+  box-shadow: 0px 3px 14px 0px #476555;
+  background-color: #476555;
 }
 
 .search-input {
@@ -26,6 +26,7 @@ body {
   border-radius: 0px;
   background-color: #ffffff;
   color: #000000;
+  font-size: 14px;
   
 }
 
@@ -38,7 +39,7 @@ body {
   font-size: 16px; 
   cursor: pointer;
   background-color: #e5e5e5;
-  color: #4961bc;
+  color: #000000;
   border: none;
   transition: background-color 0.3s ease, transform 0.2s ease, color 0.3s ease; 
 }
@@ -107,11 +108,11 @@ body {
   border: none;
   cursor: pointer;
   color: #e5e5e5;
-  background-color: #4961bc;
+  background-color: #476555;
   transition: background-color 0.3s ease, transform 0.2s ease, color 0.3s ease; 
 }
 .load-more:hover{
-  background-color: #35488d;
+  background-color: #23322a;
 }
 .is-hidden {
   display: none;
